--- a/app/views/events/_event_edit.html.erb
+++ b/app/views/events/_event_edit.html.erb
@@ -103,4 +103,4 @@
         <%= f.text_field :presale_end,:placeholder => "終了日時",:class => "event-edit-form form-short-2" %>
       </div>
     </div>
-    <%= f.submit '投稿する！', :class => "btn new pink create-post" %>
+    <%= f.submit '投稿する！', :class => "btn new green create-post" %>
