--- a/app/views/events/_no_result.html.erb
+++ b/app/views/events/_no_result.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
 </div>
-<%= link_to new_event_path,:class=>"btn new pink" do %>
+<%= link_to new_event_path,:class=>"btn new green" do %>
   <span class="fa fa-plus-circle"></span>
   <span>今すぐライブを登録する</span>
 <% end %>
