--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,7 @@
   <div class="posts">
     <%= render 'events/event_info', event: @event, user: @user %>
   </div>
-  <%= link_to new_event_path,:class=>"btn new pink" do %>
+  <%= link_to new_event_path,:class=>"btn new green" do %>
     <span class="fa fa-plus-circle"></span>
     <span>新しいライブを登録する</span>
   <% end %>
