--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -5,10 +5,18 @@
         <h2 class="search-label-name"><span class="fas fa-search icon"></span>日付で探す</h2>
       </div>
       <div class="search-button-box">
-        <span><%= link_to '今日', search_path(:date => 'today'), :class => "btn categories pink" %></span>
-        <span><%= link_to '明日', search_path(:date => 'tomorrow'), :class => "btn categories pink"  %></span>
-        <span><%= link_to '次の土曜', search_path(:date => 'next_sat'), :class => "btn categories pink"  %></span>
-        <span><%= link_to '次の日曜', search_path(:date => 'next_sun'), :class => "btn categories pink"  %></span>
+        <%= link_to search_path(:date => 'today'), :class => "categories pink" do %>
+          <span>今日<span>
+        <% end %>
+        <%= link_to search_path(:date => 'tomorrow'), :class => "categories pink" do %>
+          <span>明日</span>
+        <% end %>
+        <%= link_to search_path(:date => 'next_sat'), :class => "categories pink" do %>
+          <span>次の土曜</span>
+        <% end %>
+        <%= link_to search_path(:date => 'next_sun'), :class => "categories pink" do %>
+          <span>次の日曜</span>
+        <% end %>
       </div>
       <div class="search-form-area">
         <%= form_tag(search_path, method: "get") do %>
@@ -30,7 +38,7 @@
           <span class="fas fa-chart-line icon"></span>人気検索ワード
         </div>
           <ul>
-            <li><%= link_to 'きつね', search_path(:performer => 'きつね'), :class => "post-performer" %></li>
+            <li><%= link_to 'きつね',search_path(:performer => 'きつね'), :class => "post-performer" %></li>
             <li><%= link_to 'まんじゅう大帝国', search_path(:performer => 'まんじゅう大帝国'), :class => "post-performer"  %></li>
             <li><%= link_to '卯月', search_path(:performer => '卯月'), :class => "post-performer"  %></li>
             <li><%= link_to 'ランジャタイ', search_path(:performer => 'ランジャタイ'), :class => "post-performer"  %></li>
