--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,8 @@
-<% @events = @results[0] %>
-<% @datetime = @results[1] %>
 <section class="main">
   <div class="element page-info hard-shadows">
     <p>ライブを探す</p>
   </div>
-  <%= render :partial => "events/search_form" %>
+  <%= render :partial => "events/search_form", locals: { counts: @counts} %>
   <div class="element page-info hard-shadows">
     <% wd = ["日", "月", "火", "水", "木", "金", "土"] %> 
     <p>今日のライブ一覧 - <span class="accent"><%= @datetime.strftime("%Y年%m月%d日"+"("+%w(日 月 火 水 木 金 土)[@datetime.wday]+")") %></span></p>
