--- a/app/views/geinins/index.html.erb
+++ b/app/views/geinins/index.html.erb
@@ -1,4 +1,3 @@
-<% binding.pry %>
 <section class="main">
   <div class="page-info hard-shadows">
     <p>芸人一覧</p>
@@ -49,8 +48,6 @@
 		</div>
 	</div>
 	<% else %>
-			<p>芸人の登録はまだありません。</p>
-			<p>wArally!の芸人wikiは誰でも登録することができます！
-			<%= link_to '芸人を登録する', new_geinin_path %></p>
+			<%= render :partial=>"geinins/no_result" %>
 	<% end %>
 </section>
