--- a/app/views/geinins/_search_form.html.erb
+++ b/app/views/geinins/_search_form.html.erb
@@ -26,45 +26,35 @@
           <p class="label-border"></p>
         </div>  
         <div class="search-button-box">
-          <%= link_to search_geinins_path(:index => 'a'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'a'), :class => "btn categories pink" do %>
             <span>あ行</span>
-            <span class="tag-count"><%= @counts[0] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'ka'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'ka'), :class => "btn categories pink" do %>
             <span>か行</span>
-            <span class="tag-count"><%= @counts[1] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'sa'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'sa'), :class => "btn categories pink" do %>
             <span>さ行</span>
-            <span class="tag-count"><%= @counts[2] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'ta'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'ta'), :class => "btn categories pink" do %>
             <span>た行</span>
-            <span class="tag-count"><%= @counts[3]  %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'na'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'na'), :class => "btn categories pink" do %>
             <span>な行</span>
-            <span class="tag-count"><%= @counts[4] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'ha'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'ha'), :class => "btn categories pink" do %>
             <span>は行</span>
-            <span class="tag-count"><%= @counts[5] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'ma'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'ma'), :class => "btn categories pink" do %>
             <span>ま行</span>
-            <span class="tag-count"><%= @counts[6] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'ya'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'ya'), :class => "btn categories pink" do %>
             <span>や行</span>
-            <span class="tag-count"><%= @counts[7] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'ra'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'ra'), :class => "btn categories pink" do %>
             <span>ら行</span>
-            <span class="tag-count"><%= @counts[8] %></span>
           <% end %>
-          <%= link_to search_geinins_path(:index => 'wa'), :class => "btn geinin-index pink" do %>
+          <%= link_to search_geinins_path(:index => 'wa'), :class => "btn categories pink" do %>
             <span>わ行</span>
-            <span class="tag-count"><%= @counts[9]  %></span>
           <% end %>
         </div>
       </div>
