--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-　  <%= javascript_include_tag 'application',"data-turbolinks-track" => 'reload' %>
+    <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
+    <script src="https://unpkg.com/flatpickr"></script>
     <%= favicon_link_tag('s-favicon.png') %>
     <!-- Google Analytics
     <script>
