--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -38,16 +38,16 @@
           <span class="fas fa-chart-line icon"></span>人気検索ワード
         </div>
           <ul>
-            <li><%= link_to 'きつね',search_path(:performer => 'きつね'), :class => "post-performer" %></li>
-            <li><%= link_to 'まんじゅう大帝国', search_path(:performer => 'まんじゅう大帝国'), :class => "post-performer"  %></li>
-            <li><%= link_to '卯月', search_path(:performer => '卯月'), :class => "post-performer"  %></li>
-            <li><%= link_to 'ランジャタイ', search_path(:performer => 'ランジャタイ'), :class => "post-performer"  %></li>
-            <li><%= link_to 'トンツカタン', search_path(:performer => 'トンツカタン'), :class => "post-performer" %></li>
-            <li><%= link_to '金属バット', search_path(:performer => '金属バット'), :class => "post-performer"  %></li>
-            <li><%= link_to 'Aマッソ', search_path(:performer => 'Aマッソ'), :class => "post-performer"  %></li>
-            <li><%= link_to '三四郎', search_path(:performer => '三四郎'), :class => "post-performer"  %></li>
-            <li><%= link_to 'ゾフィー', search_path(:performer => 'ゾフィー'), :class => "post-performer"  %></li>
-            <li><%= link_to 'うしろシティ', search_path(:performer => 'うしろシティ'), :class => "post-performer"  %></li>                     
+            <li><%= link_to 'きつね',search_path(performer: 'きつね'), :class => "post-performer" %></li>
+            <li><%= link_to 'まんじゅう大帝国', search_path(performer: 'まんじゅう大帝国'), :class => "post-performer"  %></li>
+            <li><%= link_to '卯月', search_path(performer: '卯月'), :class => "post-performer"  %></li>
+            <li><%= link_to 'ランジャタイ', search_path(performer: 'ランジャタイ'), :class => "post-performer"  %></li>
+            <li><%= link_to 'トンツカタン', search_path(performer: 'トンツカタン'), :class => "post-performer" %></li>
+            <li><%= link_to '金属バット', search_path(performer: '金属バット'), :class => "post-performer"  %></li>
+            <li><%= link_to 'Aマッソ', search_path(performer: 'Aマッソ'), :class => "post-performer"  %></li>
+            <li><%= link_to '三四郎', search_path(performer: '三四郎'), :class => "post-performer"  %></li>
+            <li><%= link_to 'ゾフィー', search_path(performer: 'ゾフィー'), :class => "post-performer"  %></li>
+            <li><%= link_to 'うしろシティ', search_path(performer: 'うしろシティ'), :class => "post-performer"  %></li>                     
           </ul>    
       </div>
     </div>
