--- a/app/views/geinins/_search_form.html.erb
+++ b/app/views/geinins/_search_form.html.erb
@@ -6,7 +6,7 @@
         <p class="label-border"></p>
       </div>
       <div class="search-form-area">
-        <%= form_tag(search_path, method: "get") do %>
+        <%= form_tag(search_geinins_path, method: "get") do %>
           <%= text_field_tag :keyword,"",:class => "search-form",:placeholder =>"キーワード(例:バナナマン、M-1グランプリ)" %>
         <% end %>
       </div>
@@ -16,7 +16,7 @@
         </div>
         <% @geinin_tags.each do |tag| %>
         <ul>
-          <li><%= link_to tag.tag, search_path(:geinin_tag => tag.tag), :class => "post-performer float-left" %></li>
+          <li><%= link_to tag.tag, search_geinins_path(:tag => tag.tag), :class => "post-performer float-left" %></li>
         </ul>
         <% end %>
       </div>
