--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
     <script src="https://unpkg.com/flatpickr"></script>
-    <%= favicon_link_tag('s-favicon.png') %>
+    <link rel="icon" href="s-favicon.png">
     <!-- Google Analytics
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -131,6 +131,11 @@
           </div>
         <% end %>
     </header> 
+    <% if flash[:notice] %>
+      <div class="flash">
+        <p><%= flash[:notice] %></p>
+      </div>
+      <% end %>
     <%= yield %>
     <nav class="user-menu-sm">
       <ul class="user-menu-button-sm">
