geinin search with family name

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,1 +1,8 @@
-$main_color: 
+$accent_color: #f22e58;
+$black_char_color:#595959;
+$white_char_color:#f7f7f7;
+$white_background_color:#ffffff;
+$twitter_color:#55acee;
+$default_font_size: 14px;
+$header_height: 46px;
+$round_radius: 50%;
