--- a/app/views/geinins/search.html.erb
+++ b/app/views/geinins/search.html.erb
@@ -16,19 +16,19 @@
 	</div>
 		<div class="indexes">	
 			<input id="index-tab-0" type="radio" name="index_item" checked>
-			<label class="index_item" for="index-tab-0"><%= @indexes[0][0] %></label>
+			<label class="index_item" for="index-tab-0"><%= @a %></label>
 
 			<input id="index-tab-1" type="radio" name="index_item">
-			<label class="index_item" for="index-tab-1"><%= @indexes[1][0] %></label>
+			<label class="index_item" for="index-tab-1"><%= @i %></label>
 		
 			<input id="index-tab-2" type="radio" name="index_item">
-			<label class="index_item" for="index-tab-2"><%= @indexes[2][0] %></label>
+			<label class="index_item" for="index-tab-2"><%= @u %></label>
 
 			<input id="index-tab-3" type="radio" name="index_item">
-			<label class="index_item" for="index-tab-3"><%= @indexes[3][0] %></label>
+			<label class="index_item" for="index-tab-3"><%= @e %></label>
 
 			<input id="index-tab-4" type="radio" name="index_item">
-			<label class="index_item" for="index-tab-4"><%= @indexes[4][0] %></label>
+			<label class="index_item" for="index-tab-4"><%= @o %></label>
 		</div>
 		<% if @geinins_list.present? %>
 			<% i = 0 %>
