--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -9,7 +9,7 @@
       <% end %>
     </div>
   </div>
-  <% if @event.user.id == current_user.id %>
+  <% if @event.user_id.present? && @event.user_id == current_user.id %>
     <%= link_to event_path(@event.id), method: :delete,
     data: { confirm: "本当に「#{@event.title}」を削除してよろしいですか？",
                                                   "commit" => "削除する",
