--- a/app/views/geinins/_geinin_edit.html.erb
+++ b/app/views/geinins/_geinin_edit.html.erb
@@ -43,20 +43,57 @@
     <i class="fas fa-tags"></i>
   </div>
   <div class="form">
-    <textarea placeholder="タグ (例:芸風(漫才、コント)、賞レース戦績、代表的な出演番組など)" class="event-edit-form form-long" name="geinin[geinin_tags_attributes][0][tag]" id="geinin_geinin_tags_attributes_0_tag"><% @geinin_tags %></textarea>
+    <textarea placeholder="タグ (例:芸風(漫才、コント)、賞レース戦績、代表的な出演番組など)" class="event-edit-form form-long" name="geinin[geinin_tags_attributes][0][tag]" id="geinin_geinin_tags_attributes_0_tag"><% @geinin_tags %></textarea>  
   </div>
 </div>
 <div class="more-info">
   メンバー1
 </div>
-<%= render 'geinins/geinin_member_form', f: f %>
-<div class="more-info">
-  メンバー2
-</div>
-<%= render 'geinins/geinin_member_form', f: f %>
-<div class="more-info">
-  メンバー3
-</div>
-<%= render 'geinins/geinin_member_form', f: f %>
+<%= f.nested_fields_for :geinin_members,wrapper_tag: :div do |member_form| %>
+  <div class="form-item">
+    <div class="form-icon">
+      <i class="fas fa-address-book"></i>
+    </div>
+    <div class="form">
+      <%= member_form.text_field :family_name,:placeholder => "姓*",:class => "event-edit-form form-short"  %>
+      <%= member_form.text_field :first_name,:placeholder => "名",:class => "event-edit-form form-short"  %>
+    </div>
+  </div>
+  <div class="form-item">
+    <div class="form-icon">
+      <i class="fas fa-address-card"></i>
+    </div>
+    <div class="form">
+      <%= member_form.text_field :family_name_yomi,:placeholder => "ふりがな(姓)*",:class => "event-edit-form form-short" %>
+      <%= member_form.text_field :first_name_yomi,:placeholder => "ふりがな(名)",:class => "event-edit-form form-short"  %>
+    </div>
+  </div>
+  <div class="form-item">
+    <div class="form-icon">
+    <i class="fab fa-twitter-square"></i>
+    </div>
+    <div class="form">
+    <%= member_form.text_field :twitter_id,:placeholder => "Twitter ID",:class => "event-edit-form form-long"  %>
+    </div>
+  </div>
+  <div class="form-item">
+    <div class="form-icon">
+    <i class="fab fa-instagram"></i>
+    </div>
+    <div class="form">
+    <%= member_form.text_field :instagram_id,:placeholder => "Insgram ID",:class => "event-edit-form form-long"  %>
+    </div>
+  </div>
+  <div class="form-item">
+    <div class="form-icon">
+    <i class="fas fa-pen-nib"></i>
+    </div>
+    <div class="form">
+    <%= member_form.text_field :blog_url,:placeholder => "ブログ URL",:class => "event-edit-form form-long"  %><br>
+    </div>
+  </div>
+  <%= member_form.remove_nested_fields_link '削除', class: 'btn pink', role: 'button' %>
+<% end %>
+  <%= f.add_nested_fields_link  :geinin_members, '追加', class: 'btn green', role: 'button',data: { insert_into: '<add_member>' } %>
 
 <%= f.submit '登録する！', :class => "btn new pink create-post" %>
