--- a/app/views/geinins/_geinin_info.html.erb
+++ b/app/views/geinins/_geinin_info.html.erb
@@ -1,13 +1,16 @@
 <div class="post hard-shadows">
-  <div class="post-wrapper">
+  <div class="profile-wrapper">
     <div class="profile-header">
       <div class="profile-name">
         <span class="geinin-title"><%= geinin.name %></span>
         <span class="geinin-yomi"><%= geinin.yomi %></span>
       </div>
       <div class="following-box" id="following-button-<%= geinin.id %>">
-        <%= render :partial => "followings/following", locals: { geinin: geinin } %>	
+        <%= render 'followings/following', geinin: geinin %>	
       </div>
+    </div>
+    <div class="geinin-icon">
+      <p><%= render "geinins/geinin_sns", geinin: geinin %></p>
     </div>
     <div class="post-content typography">
       <% if geinin.start_year.present? %>
@@ -20,19 +23,34 @@
         <p><span class="fas fa-map-marker-alt icon"></span><%= geinin.agency %></p>
       <% end %>
       <% if geinin.official_profile_url.present? %>
-        <p><span class="fas fa-link icon"></span><%= link_to geinin.official_profile_url, geinin.official_profile_url %></p>
+        <span class="fas fa-link icon"></span><%= link_to geinin.official_profile_url, geinin.official_profile_url %>
       <% end %>
-      <% if geinin.twitter_id.present? %>
-        <p><span class="fab fa-twitter-square icon"></span>@<%= link_to geinin.twitter_id,"https://twitter.com/#{geinin.twitter_id}" %></p>
-      <% end %>
-      <% if geinin.youtube_url.present? %>
-        <p><span class="fab fa-youtube icon"></span><%= link_to geinin.youtube_url,geinin.youtube_url %></p>
-      <% end %>
-      <% geinin.geinin_tags.each do |tag| %>
-        <%= link_to search_path(tag: tag.tag) do %>
-          <span class="fas fa-tag icon"></span><%= tag.tag %></span>
+      <% geinin.geinin_members.each do |member| %>
+        <p><span class="fas fa-user icon"></span><span><%= member.family_name %><%= member.first_name %><span class="geinin-yomi">(<%= member.family_name_yomi %><%= member.first_name_yomi %>)</span>      
+        <% if member.twitter_id.present? %>
+          <%= link_to "https://twitter.com/#{member.twitter_id}" do %>
+            <span class="fab fa-twitter-square twitter member-icon"></span>
+          <% end %>
         <% end %>
+        <% if member.instagram_id.present? %>
+          <%= link_to "https://www.instagram.com/#{member.instagram_id}" do %>
+            <span class="fab fa-instagram instagram member-icon"></span>
+          <% end %>
+        <% end %>
+        <% if member.blog_url.present? %>
+          <%= link_to member.blog_url do %>
+            <span class="fab fa-blogger member-icon"></span>
+          <% end %>
+        <% end %>
+        </p>
       <% end %>
+      <p>
+        <% geinin.geinin_tags.each do |tag| %>
+          <%= link_to search_path(tag: tag.tag) do %>
+            <span>#<%= tag.tag %></span>
+          <% end %>
+        <% end %>
+      </p>
     </div>
     <div class="profile-nav">
       <ul class="profile-nav-list">
@@ -45,7 +63,7 @@
         <li class="profile-nav-item">
           <%= link_to geinin_path(geinin.id) do %>
             <span class="profile-nav-label">フォロワー</span>
-            <span class="profile-value"><%= Following.where(geinin_id: current_user.id).count %></span>
+            <span class="profile-value"><%= Following.where(geinin_id: geinin.id).count %></span>
           <% end %>
         </li>
         <li class="profile-nav-item">
