--- a/app/views/geinins/_geinins_list.html.erb
+++ b/app/views/geinins/_geinins_list.html.erb
@@ -6,7 +6,7 @@
           <%= link_to geinin.name, "geinins/#{geinin.id}", :class => "geinin-name" %>
         </div>
         <div class="following-box" id="following-button-<%= geinin.id %>">
-          <%= render :partial => "followings/following", locals: { geinin: geinin } %>	
+          <%= render "followings/following", geinin: geinin %>	
         </div>
       </div>
     </div>
