--- a/app/views/geinins/index.html.erb
+++ b/app/views/geinins/index.html.erb
@@ -2,7 +2,7 @@
   <div class="page-info hard-shadows">
     <p>芸人一覧</p>
   </div>
-  <%= render :partial => "geinins/search_form",locales: { geinins: @geinins, geinin_tags: @geinin_tags } %>
+  <%= render "geinins/search_form", geinins: @geinins, geinin_tags: @geinin_tags %>
 	<div class="geinin-btns">
 		<%= link_to new_geinin_path,:class =>"btn green geinin-btn" do %>
 			<i class="fa fa-plus-circle"></i>
@@ -15,29 +15,27 @@
 	</div>
   <div class="indexes">	
 		<input id="index-tab-0" type="radio" name="index_item" checked>
-		<label class="index_item" for="index-tab-0"><%= @indexes[0][0] %></label>
+		<label class="index_item" for="index-tab-0"><%= @a %></label>
 
     <input id="index-tab-1" type="radio" name="index_item">
-    <label class="index_item" for="index-tab-1"><%= @indexes[1][0] %></label>
+    <label class="index_item" for="index-tab-1"><%= @i %></label>
   
     <input id="index-tab-2" type="radio" name="index_item">
-    <label class="index_item" for="index-tab-2"><%= @indexes[2][0] %></label>
+    <label class="index_item" for="index-tab-2"><%= @u %></label>
 
     <input id="index-tab-3" type="radio" name="index_item">
-    <label class="index_item" for="index-tab-3"><%= @indexes[3][0] %></label>
+    <label class="index_item" for="index-tab-3"><%= @e %></label>
 
     <input id="index-tab-4" type="radio" name="index_item">
-    <label class="index_item" for="index-tab-4"><%= @indexes[4][0] %></label>
+    <label class="index_item" for="index-tab-4"><%= @o %></label>
   </div>
 	<% if @geinins_list.present? %>
-	  <% i = 0 %>
-		<% @geinins_list.each do |geinins| %>
+		<% @geinins_list.each_with_index do |geinins,i| %>
 			<div class="index-content" id="index-tab-<%= "#{i}" %>-content">
-				<%= render :partial=>"geinins/geinins_list", locals: { geinins: geinins} %>
+				<%= render "geinins/geinins_list", geinins: geinins %>
 			</div>
-			<% i = i+1 %>
 		<% end %>
 	<% else %>
-			<%= render :partial=>"geinins/no_result" %>
+			<%= render "geinins/no_result" %>
 	<% end %>
 </section>
