--- a/app/views/notification.html.erb
+++ b/app/views/notification.html.erb
@@ -2,9 +2,9 @@
   <div class="page-info hard-shadows">
     <h2>通知一覧</h2>
   </div>
-  <div class="post">
-    <div class="post-wrapper">
-      <div class="post-typography">
+  <div class="long-post">
+    <div class="long-post-wrapper">
+      <div class="typography">
         <p>通知機能は準備中です！</p>
       </div>
     <div>
